--- a/B1 UT STUDENT PROFILING.ipynb
+++ b/B1 UT STUDENT PROFILING.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "1ba433b2",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "[342 rows x 111 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "bcc1b767",
    "metadata": {},
    "outputs": [
@@ -922,22 +922,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "a33ce7a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: extract first names, last name, ID-number, e-mail columns and save them to a csv file: \"Student_NAME_ID_link.csv\""
+    "# TODO: extract first names, last name, ID-number, e-mail columns and save them to a csv file: \"Student_NAME_ID_link.csv\"\n",
+    "students = grades[['Eesnimi', 'Perenimi', 'ID-number', 'Meiliaadress']].copy()\n",
+    "students.to_csv('students.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "e0f84151",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Eesnimi</th>\n",
+       "      <th>Perenimi</th>\n",
+       "      <th>ID-number</th>\n",
+       "      <th>Meiliaadress</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mark-Erik</td>\n",
+       "      <td>Aan</td>\n",
+       "      <td>50105090226</td>\n",
+       "      <td>mark-erik.aan@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sass Albert</td>\n",
+       "      <td>Aare</td>\n",
+       "      <td>50106202741</td>\n",
+       "      <td>sass.albert.aare@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mia-Nicolena</td>\n",
+       "      <td>Aaver</td>\n",
+       "      <td>49711072726</td>\n",
+       "      <td>mia.aaver@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Heili</td>\n",
+       "      <td>Aavola</td>\n",
+       "      <td>60109126818</td>\n",
+       "      <td>heili.aavola@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arash</td>\n",
+       "      <td>Adab Avazeh</td>\n",
+       "      <td>38603270069</td>\n",
+       "      <td>arash.adab.avazeh@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>Joonas</td>\n",
+       "      <td>Väli</td>\n",
+       "      <td>50003092774</td>\n",
+       "      <td>joonas.vali@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>338</th>\n",
+       "      <td>Julius</td>\n",
+       "      <td>Välja</td>\n",
+       "      <td>50011131419</td>\n",
+       "      <td>julius.valja@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>Ott-Kaarel</td>\n",
+       "      <td>Vään</td>\n",
+       "      <td>50102182738</td>\n",
+       "      <td>ott-kaarel.vaan@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Õunaid</td>\n",
+       "      <td>60105140013</td>\n",
+       "      <td>jane.ounaid@ut.ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>Pirje</td>\n",
+       "      <td>Õunpuu</td>\n",
+       "      <td>60103130868</td>\n",
+       "      <td>pirje.ounpuu@ut.ee</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>342 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Eesnimi     Perenimi    ID-number             Meiliaadress\n",
+       "0       Mark-Erik          Aan  50105090226      mark-erik.aan@ut.ee\n",
+       "1     Sass Albert         Aare  50106202741   sass.albert.aare@ut.ee\n",
+       "2    Mia-Nicolena        Aaver  49711072726          mia.aaver@ut.ee\n",
+       "3           Heili       Aavola  60109126818       heili.aavola@ut.ee\n",
+       "4           Arash  Adab Avazeh  38603270069  arash.adab.avazeh@ut.ee\n",
+       "..            ...          ...          ...                      ...\n",
+       "337        Joonas         Väli  50003092774        joonas.vali@ut.ee\n",
+       "338        Julius        Välja  50011131419       julius.valja@ut.ee\n",
+       "339    Ott-Kaarel         Vään  50102182738    ott-kaarel.vaan@ut.ee\n",
+       "340          Jane       Õunaid  60105140013        jane.ounaid@ut.ee\n",
+       "341         Pirje       Õunpuu  60103130868       pirje.ounpuu@ut.ee\n",
+       "\n",
+       "[342 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: drop the same columns except ID-number from the gradebook dataset (make a copy)"
+    "# TODO: drop the same columns except ID-number from the gradebook dataset (make a copy)\n",
+    "#grades.drop(['Eesnimi', 'Perenimi', 'ID-number', 'Meiliaadress'], axis=1, inplace=True)\n",
+    "grades\n",
+    "students"
    ]
   },
   {
