added instructions to fix google translator library

--- a/B1 UT STUDENT PROFILING.ipynb
+++ b/B1 UT STUDENT PROFILING.ipynb
@@ -36,33 +36,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "17009805",
+   "execution_count": 10,
+   "id": "eced285c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Her? \n"
+      "Now the thing works and slowly translates. \n"
      ]
     }
    ],
    "source": [
-    "translate_text = translator.translate('a dela?',lang_tgt='en')  \n",
+    "translate_text = translator.translate('Sedaj stvar deluje in pocasi prevaja.',lang_tgt='en')  \n",
     "print(translate_text)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "449469af",
+   "id": "78d05e15",
    "metadata": {},
    "source": [
     "[get pip install dir windows](https://stackoverflow.com/questions/49028533/pip-packages-path-windows/49028561)\n",
     "\n",
     "[fix google trans new error](https://stackoverflow.com/questions/68214591/python-google-trans-new-translate-raises-error-jsondecodeerror-extra-data)\n",
     "\n",
-    "[google_trans_new](https://pypi.org/project/google-trans-new/)"
+    "```bash\n",
+    "pip install google_trans_new\n",
+    "```\n",
+    "[google_trans_new](https://pypi.org/project/google-trans-new/)\n",
+    "\n",
+    "**instructions to fix:**\n",
+    "\n",
+    "*copy this into terminal:*\n",
+    "```bash\n",
+    "python -c \"from distutils.sysconfig import get_python_lib; print(get_python_lib())\"\n",
+    "```\n",
+    "**Change line 151 in google_trans_new/google_trans_new.py which is:**\n",
+    "```python\n",
+    "response = (decoded_line + ']') to response = decoded_line\n",
+    "```\n",
+    "Then, restart your notebook kernel and run."
    ]
   },
   {
